layout for phones in landscape mode

--- a/src/index.html
+++ b/src/index.html
@@ -60,18 +60,28 @@
 
 			<div class="menu menu-language-choice shadow-bottom">
 				<ul>
+
 					<li>
 						<a href="javascript:;">
 							<span class="flag flag-bg"></span>
 							Български
 						</a>
 					</li>
+
 					<li>
 						<a href="javascript:;">
 							<span class="flag flag-en"></span>
 							English
 						</a>
 					</li>
+
+					<li>
+						<a href="javascript:;">
+							<span class="flag flag-fr"></span>
+							Français
+						</a>
+					</li>
+
 				</ul>
 			</div>
 
@@ -123,7 +133,7 @@
 
 
 
-		<div id="content"> </div>
+		<div class="content"> </div>
 		<footer class="shadow-top">
 			<div class="copyright">
 				&copy; 2004-2019 Димозавъръ
