language menu layout for desktop mode

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,7 @@
 						onClick="$('.menu-language-choice').toggle();$(this).toggleClass('selected');$(this).siblings('a').removeClass('selected');"
 						title="Change Language">
 						<i class="fas fa-language"></i>
+						<span class="toggle-language-label">Language</span>
 						<i class="fas fa-chevron-down"></i>
 					</a>
 				</div>
