optimized desktop-size layout

--- a/src/index.html
+++ b/src/index.html
@@ -73,82 +73,84 @@
 				</div>
 			</div>
 
-			<div class="menu-wrapper language-choice-wrapper">
-				<div class="menu menu-language-choice shadow-bottom">
-					<ul>
-						<li>
-							<a href="javascript:;">
-								<span class="flag flag-bg"></span>
-								Български
-							</a>
-						</li>
-
-						<li>
-							<a href="javascript:;">
-								<span class="flag flag-en"></span>
-								English
-							</a>
-						</li>
-
-						<li>
-							<a href="javascript:;">
-								<span class="flag flag-fr"></span>
-								Français
-							</a>
-						</li>
-
-					</ul>
-				</div>
-			</div><div class="menu-wrapper menu-main-wrapper"> <!-- the space ruins the alignment -->
-				<div class="menu menu-main shadow-bottom">
-					<ul>
-						<li>
-							<a>
-								<i class="icon fas fa-home"></i>
-								Начало
-							</a>
-						</li>
-						<li>
-							<a>
-								<i class="icon fas fa-book"></i>
-								Биография
-							</a>
-						</li>
-						<li>
-							<a href="javascript:;" onClick="$('.menu-music').toggleClass('menu-open');">
-								<i class="icon fas fa-music"></i>
-								Музика
-								<i class="fas fa-chevron-down"></i>
-							</a>
-						</li>
-					</ul>
-
-					<div class="menu menu-music shadow-bottom">
+			<div class="header-super-wrapper">
+				<div class="menu-wrapper language-choice-wrapper">
+					<div class="menu menu-language-choice shadow-bottom">
 						<ul>
 							<li>
-								<a>(2014) III</a>
+								<a href="javascript:;">
+									<span class="flag flag-bg"></span>
+									Български
+								</a>
 							</li>
+
 							<li>
-								<a>(2013) Битка на баира</a>
+								<a href="javascript:;">
+									<span class="flag flag-en"></span>
+									English
+								</a>
 							</li>
+
 							<li>
-								<a>(2013) Пътят, който всички...</a>
+								<a href="javascript:;">
+									<span class="flag flag-fr"></span>
+									Français
+								</a>
 							</li>
-							<li>
-								<a>(2010) Яхния от мисли</a>
-							</li>
-							<li>
-								<a>(2006) Зона Чернобил</a>
-							</li>
-							<li>
-								<a>Всички албуми</a>
-							</li>
-							<li>
-								<a>Кавъри</a>
-							</li>
+
 						</ul>
 					</div>
+				</div><div class="menu-wrapper menu-main-wrapper"> <!-- the space ruins the alignment -->
+					<div class="menu menu-main shadow-bottom">
+						<ul>
+							<li>
+								<a>
+									<i class="icon fas fa-home"></i>
+									Начало
+								</a>
+							</li>
+							<li>
+								<a>
+									<i class="icon fas fa-book"></i>
+									Биография
+								</a>
+							</li>
+							<li>
+								<a href="javascript:;" onClick="$('.menu-music').toggleClass('menu-open');">
+									<i class="icon fas fa-music"></i>
+									Музика
+									<i class="fas fa-chevron-down"></i>
+								</a>
+							</li>
+						</ul>
 
+						<div class="menu menu-music shadow-bottom">
+							<ul>
+								<li>
+									<a>(2014) III</a>
+								</li>
+								<li>
+									<a>(2013) Битка на баира</a>
+								</li>
+								<li>
+									<a>(2013) Пътят, който всички...</a>
+								</li>
+								<li>
+									<a>(2010) Яхния от мисли</a>
+								</li>
+								<li>
+									<a>(2006) Зона Чернобил</a>
+								</li>
+								<li>
+									<a>Всички албуми</a>
+								</li>
+								<li>
+									<a>Кавъри</a>
+								</li>
+							</ul>
+						</div>
+
+					</div>
 				</div>
 			</div>
 
