layout for large desktop size

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
 
 			<div class="header-super-wrapper">
 				<div class="menu-wrapper language-choice-wrapper">
-					<div class="menu menu-language-choice menu-closed shadow-bottom">
+					<nav class="menu menu-language-choice menu-closed shadow-bottom">
 						<ul>
 							<li>
 								<a href="javascript:;">
@@ -99,9 +99,9 @@
 							</li>
 
 						</ul>
-					</div>
+					</nav>
 				</div><div class="menu-wrapper menu-main-wrapper"> <!-- the space ruins the alignment -->
-					<div class="menu menu-main menu-closed shadow-bottom">
+					<nav class="menu menu-main menu-closed shadow-bottom">
 						<ul>
 							<li>
 								<a>
@@ -124,7 +124,7 @@
 							</li>
 						</ul>
 
-						<div class="menu menu-music menu-closed shadow-bottom">
+						<nav class="menu menu-music menu-closed shadow-bottom">
 							<ul>
 								<li>
 									<a>(2014) III</a>
@@ -148,14 +148,13 @@
 									<a>Кавъри</a>
 								</li>
 							</ul>
-						</div>
+						</nav>
 
-					</div>
+					</nav>
 				</div>
 			</div>
 
 		</header>
-
 
 		<div class="content">
 			<h1 class="screen-test screen-xs">Mobile</h1>
