basic player buttons (unstyled)

--- a/src/index.html
+++ b/src/index.html
@@ -170,6 +170,34 @@
 			</div>
 		</footer>
 
+		<div class="player shadow-top">
+			<div class="player-controls">
+				<i class="fas fa-step-backward"></i>
+				<i class="fas fa-play"></i>
+				<i class="fas fa-step-forward"></i>
+
+				<!-- <i class="fas fa-volume-off"></i> -->
+				<i class="fas fa-volume-up"></i>
+			</div>
+
+			<div class="track-progress-bar-container">
+				<span class="progress-time">02:16</span>
+
+				<div class="track-progress-bar">
+					<div class="track-progress"></div>
+				</div>
+
+				<span class="total-time">10:38</span>
+			</div>
+
+
+			<span class="track-title">Отново е време за лов</span>
+			<span class="playlist">
+				<i class="fas fa-bars"></i>
+				<i class="fas fa-play"></i>
+			</span>
+		</div>
+
 	</body>
 
 </html>
