footer for mobile screens

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 			integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47"
 			crossorigin="anonymous">
 
-		<link
+<!-- 		<link
 			rel="stylesheet"
 			href="https://use.fontawesome.com/releases/v5.12.0/css/solid.css"
 			integrity="sha384-9AfJF7pZ+RYk3wXpf8ge6fc3XhPaW3Xl57Qj/mSzPckn9Tu8zJ9qUipWq+/utX20"
@@ -25,9 +25,11 @@
 			rel="stylesheet"
 			href="https://use.fontawesome.com/releases/v5.12.0/css/fontawesome.css"
 			integrity="sha384-VoScp22LWX8GkkUAmdkkkj+rz+/r84lmCD6FALIryJxjwBSz6kE6oebSlamQx19e"
-			crossorigin="anonymous">
+			crossorigin="anonymous"> -->
 
-		<link rel="stylesheet" href="css.css?version=2" />
+		<link rel="stylesheet" href="css.css?version=3" />
+
+		<script src="https://kit.fontawesome.com/72096b0630.js" crossorigin="anonymous"></script>
 
 		<script
 			src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -165,18 +167,46 @@
 		</div>
 
 		<footer class="shadow-top">
+			<div class="social">
+				<span class="social-label">Social:</span>
+				<div class="social-icons">
+					<a
+						title="Dimmu Saurus Bandcamp page"
+						href="http://bandcamp.com"
+						target="_blank">
+							<i class="fab fa-bandcamp"></i>
+					</a>
+					<a
+						title="Dimmu Saurus on Facebook"
+						href="https://www.facebook.com/dimmusaurus/"
+						target="_blank">
+							<i class="fab fa-facebook-square"></i>
+					</a>
+					<a
+						title="Dimmu Saurus Youtube channel"
+						href="https://www.youtube.com/playlist?list=PLBugGYGZgZWcA8ePOBLDdyD1__D7WWxMI"
+						target="_blank">
+							<i class="fab fa-youtube"></i>
+					</a>
+				</div>
+			</div>
+
 			<div class="copyright">
-				&copy; 2004-2019 Димозавъръ
+				<span class="copyright-copy">&copy;</span>
+				<span class="copyright-first-year">2004-</span>
+				<span class="copyright-last-year">2019</span>
+				<span class="copyright-ds">Димозавъръ</span>
 			</div>
 		</footer>
 
+
 		<div class="player shadow-top">
-			<div class="player-controls">
+			[[ Player ]]
+		<!--	<div class="player-controls">
 				<i class="fas fa-step-backward"></i>
 				<i class="fas fa-play"></i>
 				<i class="fas fa-step-forward"></i>
 
-				<!-- <i class="fas fa-volume-off"></i> -->
 				<i class="fas fa-volume-up"></i>
 			</div>
 
@@ -195,7 +225,7 @@
 			<span class="playlist">
 				<i class="fas fa-bars"></i>
 				<i class="fas fa-play"></i>
-			</span>
+			</span> -->
 		</div>
 
 	</body>
