footer for tablet and desktop screens

--- a/src/index.html
+++ b/src/index.html
@@ -166,28 +166,21 @@
 			<h1 class="screen-test screen-xl">Desktop, large</h1>
 		</div>
 
+		<!-- Whitespace ruins alignment, so <a> tags had to be compressed -->
 		<footer class="shadow-top">
 			<div class="social">
-				<span class="social-label">Social:</span>
+				<div class="social-label">Follow:</div>
 				<div class="social-icons">
 					<a
 						title="Dimmu Saurus Bandcamp page"
 						href="http://bandcamp.com"
-						target="_blank">
-							<i class="fab fa-bandcamp"></i>
-					</a>
-					<a
+						target="_blank"><i class="fab fa-bandcamp"></i></a><a
 						title="Dimmu Saurus on Facebook"
 						href="https://www.facebook.com/dimmusaurus/"
-						target="_blank">
-							<i class="fab fa-facebook-square"></i>
-					</a>
-					<a
+						target="_blank"><i class="fab fa-facebook-square"></i></a><a
 						title="Dimmu Saurus Youtube channel"
 						href="https://www.youtube.com/playlist?list=PLBugGYGZgZWcA8ePOBLDdyD1__D7WWxMI"
-						target="_blank">
-							<i class="fab fa-youtube"></i>
-					</a>
+						target="_blank"><i class="fab fa-youtube"></i></a>
 				</div>
 			</div>
 
@@ -200,7 +193,7 @@
 		</footer>
 
 
-		<div class="player shadow-top">
+		<div class="player shadow-top" style="justify-content: center;">
 			[[ Player ]]
 		<!--	<div class="player-controls">
 				<i class="fas fa-step-backward"></i>
