--- a/src/index.html
+++ b/src/index.html
@@ -12,20 +12,8 @@
 
 		<link
 			rel="stylesheet"
-			href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
-			integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47"
+			href="https://unpkg.com/purecss@1.0.1/build/base-min.css"
 			crossorigin="anonymous">
-
-<!-- 		<link
-			rel="stylesheet"
-			href="https://use.fontawesome.com/releases/v5.12.0/css/solid.css"
-			integrity="sha384-9AfJF7pZ+RYk3wXpf8ge6fc3XhPaW3Xl57Qj/mSzPckn9Tu8zJ9qUipWq+/utX20"
-			crossorigin="anonymous">
-		<link
-			rel="stylesheet"
-			href="https://use.fontawesome.com/releases/v5.12.0/css/fontawesome.css"
-			integrity="sha384-VoScp22LWX8GkkUAmdkkkj+rz+/r84lmCD6FALIryJxjwBSz6kE6oebSlamQx19e"
-			crossorigin="anonymous"> -->
 
 		<link rel="stylesheet" href="css.css?version=3" />
 
