--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,14 @@
 
 		<link
 			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Griffy|Noto+Sans:400,400i,700,700i&amp;display=swap&amp;subset=cyrillic">
+
+		<link
+			rel="stylesheet"
 			href="https://unpkg.com/purecss@1.0.1/build/base-min.css"
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="css.css?version=3" />
+		<link rel="stylesheet" href="css.css?version=4">
 
 		<script src="https://kit.fontawesome.com/72096b0630.js" crossorigin="anonymous"></script>
 
