--- a/src/index.html
+++ b/src/index.html
@@ -155,6 +155,9 @@
 			<h1 class="screen-test screen-xl">Desktop, large</h1>
 		</div>
 
+		<div class="menu menu-playlist menu-closed">
+		</div>
+
 		<!-- Whitespace ruins alignment, so <a> tags had to be compressed -->
 		<footer class="shadow-top">
 			<div class="social">
@@ -182,14 +185,15 @@
 		</footer>
 
 
-		<div class="player shadow-top" style="justify-content: center;">
-			[[ Player ]]
-		<!--	<div class="player-controls">
-				<i class="fas fa-step-backward"></i>
-				<i class="fas fa-play"></i>
-				<i class="fas fa-step-forward"></i>
+		<div class="player shadow-top">
+			<a
+				id="pl-playlist-toggle"
+				href="javascript:;"
+				onClick="togglePlaylist()"
+				class="playlist"><i class="fas fa-chevron-up"></i></a>
 
-				<i class="fas fa-volume-up"></i>
+			<div class="track-title-wrapper">
+				<div class="track-title">Отново е време за лов</div>
 			</div>
 
 			<div class="track-progress-bar-container">
@@ -202,12 +206,24 @@
 				<span class="total-time">10:38</span>
 			</div>
 
+			<div class="player-controls">
+				<a
+					id="pl-previous"
+					class="fas fa-step-backward"
+					href="javascript:;"></a><a
 
-			<span class="track-title">Отново е време за лов</span>
-			<span class="playlist">
-				<i class="fas fa-bars"></i>
-				<i class="fas fa-play"></i>
-			</span> -->
+					id="pl-play"
+					class="fas fa-play"
+					href="javascript:;"></a><a
+
+					id="pl-next"
+					class="fas fa-step-forward"
+					href="javascript:;"></a><a
+
+					id="pl-volume"
+					class="fas fa-volume-up"
+					href="javascript:;"></a>
+			</div>
 		</div>
 
 	</body>
