--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,7 @@
 				onClick="togglePlaylist()"
 				class="playlist"><i class="fas fa-chevron-up"></i></a>
 
-				<div class="track-title">Отново е време за лов</div>
+				<div class="track-title">Le temps de chasseurs a venu encore une fois</div>
 
 			<div class="track-progress-bar-container">
 				<span class="progress-time">02:16</span>
@@ -206,6 +206,10 @@
 
 			<div class="player-controls">
 				<a
+					onClick="toggleMute()"
+					class="volume fas fa-volume-up"
+					href="javascript:;"></a><a
+
 					id="pl-previous"
 					class="fas fa-step-backward"
 					href="javascript:;"></a><a
@@ -216,10 +220,6 @@
 
 					id="pl-next"
 					class="fas fa-step-forward"
-					href="javascript:;"></a><a
-
-					id="pl-volume"
-					class="fas fa-volume-up"
 					href="javascript:;"></a>
 			</div>
 		</div>
