--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,11 @@
 			href="https://unpkg.com/purecss@1.0.1/build/base-min.css"
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="css.css?version=6">
+		<link rel="stylesheet" href="css.css?version=7">
 
 		<script src="https://kit.fontawesome.com/72096b0630.js" crossorigin="anonymous"></script>
 
-		<script src="js.js"></script>
+		<script src="js.js?version=2"></script>
 	</head>
 
 	<body>
@@ -192,7 +192,7 @@
 				onClick="togglePlaylist()"
 				class="playlist"><i class="fas fa-chevron-up"></i></a>
 
-				<div class="track-title">Le temps de chasseurs a venu encore une fois</div>
+				<div class="track-title">Le temps de chasseurs est venu encore une fois</div>
 
 			<div class="track-progress-bar-container">
 				<span class="progress-time">02:16</span>
