playlist base template

--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,27 @@
 			<h1 class="screen-test screen-xl">Desktop, large</h1>
 		</div>
 
-		<div class="menu menu-playlist menu-closed">
+		<div class="menu menu-playlist shadow-top menu-closed">
+			<ul>
+				<li>
+					<a>Патката бяла</a>
+				</li>
+				<li>
+					<a>Баба меца си изгуби кеца</a>
+				</li>
+				<li>
+					<a>Кондю яде спанак</a>
+				</li>
+				<li>
+					<a>Тука не знам какво да напиша</a>
+				</li>
+				<li>
+					<a>Има марулка, има трушийка и ще пийнем ракийка</a>
+				</li>
+				<li>
+					<a>Да изорем дружно нивите, момчета!</a>
+				</li>
+			</ul>
 		</div>
 
 		<!-- Whitespace ruins alignment, so <a> tags had to be compressed -->
@@ -192,7 +212,13 @@
 				onClick="togglePlaylist()"
 				class="playlist"><i class="fas fa-chevron-up"></i></a>
 
-				<div class="track-title">Le temps de chasseurs est venu encore une fois</div>
+				<div class="track-title">
+					<a
+						href="javascript:;"
+						onClick="togglePlaylist()">
+					Le temps de chasseurs est venu encore une fois
+					</a>
+				</div>
 
 			<div class="track-progress-bar-container">
 				<span class="progress-time">02:16</span>
