--- a/src/index.html
+++ b/src/index.html
@@ -161,13 +161,13 @@
 					<a>Патката бяла</a>
 				</li>
 				<li>
-					<a>Баба меца си изгуби кеца</a>
+					<a class="selected">Баба меца си изгуби кеца</a>
 				</li>
 				<li>
 					<a>Кондю яде спанак</a>
 				</li>
 				<li>
-					<a>Тука не знам какво да напиша</a>
+					<a>Don't leave me, Kage, you played the best shit you've ever fucking played</a>
 				</li>
 				<li>
 					<a>Има марулка, има трушийка и ще пийнем ракийка</a>
