added Lorem Ipsum html templates for easier designing

--- a/src/index.html
+++ b/src/index.html
@@ -147,12 +147,89 @@
 
 		</header>
 
-		<div class="content">
-			<h1 class="screen-test screen-xs">Mobile</h1>
-			<h1 class="screen-test screen-s">Mobile, horizontal</h1>
-			<h1 class="screen-test screen-m">Tablet</h1>
-			<h1 class="screen-test screen-l">Desktop, small</h1>
-			<h1 class="screen-test screen-xl">Desktop, large</h1>
+		<div class="content content-home">
+			<article>
+				<h1>Home Page</h1>
+				<p>This is the den of the blues dimosaur (Latin: Dimmu Saurus).</p>
+				<p>
+					Това е гаражен проект за блус, рок и метъл без ограничения и без правила – каквато трябва да бъде истинската музика.
+				</p>
+				<p>Ако харесвате такава музика, продължете към <a href="/музика">дискографията</a>, за да чуете някоя песен. А ако сте любопитни да разберете нещо повече за проекта, прочетете <a href="/биография">историята на „Димозавъръ“.</a>
+				</p>
+			</article>
+
+			<h1>Последни новини</h1>
+
+			<article>
+				<h3>Нова песен - "Самотният старец край езерния бряг"</h3>
+				<h4>01.08.2017</h4>
+				<p>
+					Ново кънтри-блус парче, с което се връщаме назад към древните времена, когато магията е била жива.
+				</p>
+
+				<a href="/музика/парчета/32-Самотният%20старец%20край%20езерния%20бряг">Самотният старец край езерния бряг</a>
+			</article>
+
+
+			<article>
+				<h3>Lorem Ipsum</h3>
+				<h4>23.04.1521</h4>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec orci condimentum, congue dui at, lacinia odio. Ut dapibus, purus nec lobortis interdum, erat dolor aliquam eros, eu facilisis dolor neque quis risus. Sed elementum tincidunt nibh vitae varius. Vivamus consequat placerat posuere. Nam luctus a diam non mattis. Ut feugiat, lectus non convallis ultrices, arcu lectus posuere ligula, eget ultrices ipsum ex ac dui. Integer vitae consectetur lorem. Mauris vitae sem a sem bibendum ullamcorper quis eget leo.</p>
+
+				<p>Donec semper libero sit amet auctor hendrerit. Mauris et tincidunt est. Aliquam egestas velit ipsum, ornare luctus nibh commodo laoreet. Fusce.</p>
+			</article>
+		</div>
+
+
+		<div class="content content-bio">
+			<h1>About Dimmu Saurus</h1>
+			<article>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec orci condimentum, congue dui at, lacinia odio. Ut dapibus, purus nec lobortis interdum, erat dolor aliquam eros, eu facilisis dolor neque quis risus. Sed elementum tincidunt nibh vitae varius. Vivamus consequat placerat posuere. Nam luctus a diam non mattis.</p>
+
+				<h4>Capite primo</h4>
+				<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut quis est vitae tellus placerat interdum. Proin ante eros, efficitur sed leo id, dignissim feugiat nibh. Aliquam feugiat pellentesque diam, quis molestie libero scelerisque consequat. In facilisis vehicula nulla id volutpat. Aenean bibendum sapien lectus, at ultricies dui faucibus quis. Phasellus eu auctor risus. Phasellus placerat, est in varius imperdiet, massa sem ultricies enim, quis feugiat dolor quam ornare massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum leo ligula, cursus et lacus vel, aliquam rhoncus turpis. Fusce pretium quam at scelerisque pellentesque. Aliquam nec mauris in velit maximus cursus. Integer dignissim mollis libero at aliquet. Phasellus ultrices tellus a erat facilisis, ac interdum neque vulputate. Aliquam erat volutpat. Phasellus egestas neque non pellentesque posuere.</p>
+
+				<h4>Capite secundo</h4>
+				<p>Sed vitae velit vel urna bibendum tristique. Vivamus id elit in sapien pretium aliquam. Ut fringilla vulputate metus, vel tempus dolor aliquet quis. Donec posuere ex quis dui ornare, eu interdum sem accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean nisi diam, facilisis pellentesque est in, faucibus vehicula elit. Proin vel pharetra orci. Proin auctor odio metus, non scelerisque leo accumsan vitae. Praesent accumsan a purus vel malesuada.</p>
+
+				<h4>Capite tertio</h4>
+				<p>Donec in ullamcorper nisl. Quisque fermentum enim sit amet dui tristique, ut posuere enim dictum. Fusce scelerisque arcu risus, non porta dui lobortis ut. Integer mi nibh, imperdiet in turpis at, dignissim consequat nisi. Nunc arcu ipsum, blandit et velit vitae, feugiat blandit tortor. Integer imperdiet tincidunt nunc, nec convallis augue viverra eget. Donec dui felis, dignissim sit amet urna in, facilisis consectetur dui. Vestibulum enim ligula, tempus vitae urna nec, mattis semper neque.</p>
+
+				<h4>Capite quatro</h4>
+				<p> Pellentesque a libero ac lacus malesuada porttitor. Integer nec faucibus ipsum. Nullam mattis sollicitudin lectus, et viverra purus rhoncus ut. Ut commodo vehicula augue vel lacinia. Mauris eu purus vitae metus congue commodo. In ut aliquam arcu. Integer blandit, nulla ac ullamcorper varius, eros est hendrerit enim, suscipit interdum eros augue id justo. Integer iaculis at urna eu luctus. Nunc iaculis tellus quis convallis vestibulum. Donec posuere egestas felis, eu dignissim orci tincidunt varius. Vestibulum hendrerit massa at iaculis vestibulum. Nam nec nibh sagittis lorem semper hendrerit in vitae tortor. Sed posuere dapibus ullamcorper. Pellentesque elementum dolor lectus, in rutrum augue varius a. Nulla quis congue nulla. Donec ultrices sollicitudin sem in efficitur.</p>
+
+			</article>
+		</div>
+
+
+		<div class="content content-404">
+			<article>
+				<h1>404</h1>
+				<p>"http://ivan-vazov.com/" not found.</p>
+			</article>
+		</div>
+
+
+		<div class="content content-discography">
+			<article>
+				<h1>Discography</h1>
+				<p>Donec in ullamcorper nisl. Quisque fermentum enim sit amet dui tristique, ut posuere enim dictum. Fusce scelerisque arcu risus, non porta dui lobortis ut. Integer mi nibh, imperdiet in turpis at, dignissim consequat nisi. Nunc arcu ipsum, blandit et velit vitae, feugiat blandit tortor. Integer imperdiet tincidunt nunc, nec convallis augue viverra eget.</p>
+			</article>
+			<hr>
+			<article class="album"><h3> (2014) III </h3><span class="oblojka"></span><ol class="pesni"><li><div class="ime"><a class="ajaxLink" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81"> Жълтият блус </a></div><span class="vremetraene"> 3:25 </span></li><li><div class="ime"><a class="ajaxLink" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/28-%D0%9C%D0%B5%D0%B7%D0%B5%D1%82%D0%B0%20%D0%B2%20%D0%BA%D0%B8%D0%BB%D0%B8%D1%8F%D1%82%D0%B0"> Мезета в килията </a></div><span class="vremetraene"> 3:25 </span></li><li><div class="ime"><a class="ajaxLink" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/29-Extraordinary%20kitchen%20blues"> Extraordinary kitchen blues </a></div><span class="vremetraene"> 2:49 </span></li><li><div class="ime"><a class="ajaxLink" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/31-%D0%97%D0%BB%D0%B8%D1%8F%20%D0%BF%D0%B5%D1%81"> Злия пес </a></div><span class="vremetraene"> 4:39 </span></li><li><div class="ime"><a class="ajaxLink" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/32-%D0%A1%D0%B0%D0%BC%D0%BE%D1%82%D0%BD%D0%B8%D1%8F%D1%82%20%D1%81%D1%82%D0%B0%D1%80%D0%B5%D1%86%20%D0%BA%D1%80%D0%B0%D0%B9%20%D0%B5%D0%B7%D0%B5%D1%80%D0%BD%D0%B8%D1%8F%20%D0%B1%D1%80%D1%8F%D0%B3"> Самотният старец край езерния бряг </a></div><span class="vremetraene"> 2:42 </span></li></ol><p class="opisanie">"III" все още не е истински албум, а съдържа най-новите и най-яките песни на Димозавъръ, записани след 2014 година. </p></article>
+		</div>
+
+		<div class="content content-tune">
+			<article class="pesen">
+				<h3><a href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%B8%D0%B7%D1%82%D0%B5%D0%B3%D0%BB%D0%B8/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81"> Жълтият блус </a> - 3:25	</h3><h5> 19 октомври 2014	</h5><ul class="vrzki-ikoni"><li></li><li><a href="javascript:;" onclick="Upravlenie.Playlist.play(27)"><span class="ikona play"></span><span class="tekst lowercase"> Пусни </span></a></li><li><a class="ajaxLink" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D1%82%D0%B5%D0%BA%D1%81%D1%82%D0%BE%D0%B2%D0%B5/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81"><span class="ikona lyrics"></span><span class="tekst"> текст </span></a></li><li><a href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%B8%D0%B7%D1%82%D0%B5%D0%B3%D0%BB%D0%B8/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81"><span class="ikona download"></span><span class="tekst"> изтеглѝ </span></a></li></ul><hr class="bled-1px"><div><div class="m10"><p>Парчето е създадено за дванайсет дни между 22 февруари и 18 октомври 2014 година.</p><p>Написах това парче, след като през декември 2013, бях болен от грип почти цял месец. При записите, целта ми беше да постигна първичния и минималистичен звук на ранния рок, като в първите албуми на Rolling Stones и Dr. Feelgood и AC/DC.</p><p> Първоначално имах намерение да завърша парчето набързо, но поради временната липса на помещение за записи и тонколони, се наложи това да се случи чак през есента на 2014.</p></div></div>
+			</article>
+		</div>
+
+		<div class="content content-lyrics">
+			<article class="lyrics">
+				<div class="stihove"><h3>Спонтанно механично разпръскване на аромати у дома</h3><div class="tekst_prevod">[<a href="/музика/текстове/10-С.М.Р.А.Д#english_lyrics">English Translation</a>]</div>Во стаичката пръска аромат,<br>тайно шмугнал се през джама.<br>Лъхна мене тази смрад,<br>с портрета гледаме се двама.<br><br>Снощи воден от любов гореща,<br>зная - идва ти у нас,<br>лице в лице с мастията зловеща<br>обърна го на бяг завчас<br><br>После с резко джекичановско движение,<br>от двойно салто в троен аксел,<br>со безмерно ускорение,<br>влетя; за мен лиги си наточил.<br><br>Во перваза тихичко се джасна,<br>малко поизкърти дограмата,<br>но да видиш изгората прекрасна,<br>баш туй ти маеше душата.<br><br>Стъпка подир стъпка<br>коридорът се скъсява<br>и нараства твойта тръпка,<br>и перманентно усмърдяваш.<br><br>Во точка произволна,<br>но пък доста акуратно,<br>с физиономия доволна,<br>вратата бутна деликатно.<br><br>Но мойта липса бе за тебе видна,<br>"Само да та гепна" -<br>от плюнки дъжд изригна -<br>"тебе дънкити шти цепна!"<br><br>И навъсен бързо се завърна<br>Като мълния през джама мина<br>Назад се вече не обърна<br>Под светлината лунна си замина<br><br>Во стаичката пръска аромат,<br>сладък като бриз крайречен,<br>незаличим от никой препарат,<br>остана споменът за тебе вечен. <h3 id="english_lyrics">Spontaneous mechanic dipersion of fragrances at home</h3>There is a smell in the room,<br>You secretly snuck in through the window.<br>Now I can feel it<br>And I look at your portrait.<br><br>Last night your hot love<br>has led you to my home, I know.<br>But when you faced the evil cur,<br>you ran around in haste.<br><br>After that, as fast as Jackie Chan<br>You did a double somersault then a tripple axel jump,<br>And with infinite acceleration<br>You flew in, flaming with desire.<br><br>You bumped quietly into the sill<br>And destroyed the woodwork a little,<br>But to see your beautiful love<br>Was the only thing on your mind.<br><br>Step by step<br>The corridor becomes shorter<br>And your passion increases,<br>And your smell would stay permanently.<br><br>In a random spot,<br>However, very accurately,<br>With your face showing satisfaction,<br>you pushed the door softly.<br><br>But my absence came to your knowledge,<br>"Just let me get to you", <br>A shower of saliva bursted,<br>"I'll rip your blue jeans".<br><br>With a frowny face you came back<br>Through the window like a lightning<br>You never turned back anymore<br>You walked away under the moonlight<br><br>There is a smell in the room,<br>So sweet, like the breeze on a river bank.<br>Resistant to any cleaning solution,<br>Has remained the memory of you. </div>
+			</article>
 		</div>
 
 		<div class="menu menu-playlist shadow-top menu-closed">
